y.output
Terminals which are not used

   ENUMERATION_CONSTANT
   TYPEDEF_NAME
   USING
   PRE


State 341 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'

    5 constant: I_CONSTANT
    6         | F_CONSTANT

    7 string: STRING_LITERAL
    8       | FUNC_NAME

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' ')'
   12                   | postfix_expression '(' argument_expression_list ')'
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression PTR_OP IDENTIFIER
   15                   | postfix_expression INC_OP
   16                   | postfix_expression DEC_OP

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 unary_expression: postfix_expression
   20                 | INC_OP unary_expression
   21                 | DEC_OP unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF '(' type_name ')'

   25 unary_operator: '&'
   26               | '*'
   27               | '+'
   28               | '-'
   29               | '~'
   30               | '!'

   31 cast_expression: unary_expression
   32                | '(' type_name ')' cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression '*' cast_expression
   35                          | multiplicative_expression '/' cast_expression
   36                          | multiplicative_expression '%' cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression '+' multiplicative_expression
   39                    | additive_expression '-' multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFT_OP additive_expression
   42                 | shift_expression RIGHT_OP additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression '<' shift_expression
   45                      | relational_expression '>' shift_expression
   46                      | relational_expression LE_OP shift_expression
   47                      | relational_expression GE_OP shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQ_OP relational_expression
   50                    | equality_expression NE_OP relational_expression

   51 and_expression: equality_expression
   52               | and_expression '&' equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression '^' and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression '|' exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression AND_OP inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression OR_OP logical_and_expression

   61 conditional_expression: logical_or_expression
   62                       | logical_or_expression '?' expression ':' conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: '='
   66                    | MUL_ASSIGN
   67                    | DIV_ASSIGN
   68                    | MOD_ASSIGN
   69                    | ADD_ASSIGN
   70                    | SUB_ASSIGN
   71                    | LEFT_ASSIGN
   72                    | RIGHT_ASSIGN
   73                    | AND_ASSIGN
   74                    | XOR_ASSIGN
   75                    | OR_ASSIGN

   76 expression: assignment_expression
   77           | expression ',' assignment_expression

   78 constant_expression: conditional_expression

   79 declaration: declaration_specifiers ';'
   80            | declaration_specifiers init_declarator_list ';'

   81 declaration_specifiers: storage_class_specifier
   82                       | storage_class_specifier declaration_specifiers
   83                       | type_specifier
   84                       | type_specifier declaration_specifiers
   85                       | type_qualifier
   86                       | type_qualifier declaration_specifiers

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list ',' init_declarator

   89 init_declarator: declarator
   90                | declarator '=' initializer

   91 storage_class_specifier: TYPEDEF
   92                        | EXTERN
   93                        | STATIC
   94                        | AUTO
   95                        | REGISTER

   96 type_specifier: VOID
   97               | CHAR
   98               | SHORT
   99               | INT
  100               | LONG
  101               | FLOAT
  102               | DOUBLE
  103               | SIGNED
  104               | UNSIGNED
  105               | struct_or_union_specifier
  106               | enum_specifier

  107 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  108                          | struct_or_union '{' struct_declaration_list '}'
  109                          | struct_or_union IDENTIFIER

  110 struct_or_union: STRUCT
  111                | UNION

  112 struct_declaration_list: struct_declaration
  113                        | struct_declaration_list struct_declaration

  114 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  115 specifier_qualifier_list: type_specifier specifier_qualifier_list
  116                         | type_specifier
  117                         | type_qualifier specifier_qualifier_list
  118                         | type_qualifier

  119 struct_declarator_list: struct_declarator
  120                       | struct_declarator_list ',' struct_declarator

  121 struct_declarator: declarator
  122                  | ':' constant_expression
  123                  | declarator ':' constant_expression

  124 enum_specifier: ENUM '{' enumerator_list '}'
  125               | ENUM IDENTIFIER '{' enumerator_list '}'
  126               | ENUM IDENTIFIER

  127 enumerator_list: enumerator
  128                | enumerator_list ',' enumerator

  129 enumerator: IDENTIFIER
  130           | IDENTIFIER '=' constant_expression

  131 type_qualifier: CONST
  132               | VOLATILE

  133 declarator: pointer direct_declarator
  134           | direct_declarator

  135 direct_declarator: IDENTIFIER
  136                  | '(' declarator ')'
  137                  | direct_declarator '[' constant_expression ']'
  138                  | direct_declarator '[' ']'
  139                  | direct_declarator '(' parameter_type_list ')'
  140                  | direct_declarator '(' identifier_list ')'
  141                  | direct_declarator '(' ')'

  142 pointer: '*'
  143        | '*' type_qualifier_list
  144        | '*' pointer
  145        | '*' type_qualifier_list pointer

  146 type_qualifier_list: type_qualifier
  147                    | type_qualifier_list type_qualifier

  148 parameter_type_list: parameter_list
  149                    | parameter_list ',' ELLIPSIS

  150 parameter_list: parameter_declaration
  151               | parameter_list ',' parameter_declaration

  152 parameter_declaration: declaration_specifiers declarator
  153                      | declaration_specifiers abstract_declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list ',' IDENTIFIER

  157 type_name: specifier_qualifier_list
  158          | specifier_qualifier_list abstract_declarator

  159 abstract_declarator: pointer
  160                    | direct_abstract_declarator
  161                    | pointer direct_abstract_declarator

  162 direct_abstract_declarator: '(' abstract_declarator ')'
  163                           | '[' ']'
  164                           | '[' constant_expression ']'
  165                           | direct_abstract_declarator '[' ']'
  166                           | direct_abstract_declarator '[' constant_expression ']'
  167                           | '(' ')'
  168                           | '(' parameter_type_list ')'
  169                           | direct_abstract_declarator '(' ')'
  170                           | direct_abstract_declarator '(' parameter_type_list ')'

  171 initializer: assignment_expression
  172            | '{' initializer_list '}'
  173            | '{' initializer_list ',' '}'

  174 initializer_list: initializer
  175                 | initializer_list ',' initializer

  176 statement: labeled_statement
  177          | compound_statement
  178          | expression_statement
  179          | selection_statement
  180          | iteration_statement
  181          | jump_statement

  182 labeled_statement: IDENTIFIER ':' statement
  183                  | CASE constant_expression ':' statement
  184                  | DEFAULT ':' statement

  185 compound_statement: '{' '}'
  186                   | '{' statement_list '}'
  187                   | '{' declaration_list '}'
  188                   | '{' declaration_list statement_list '}'

  189 declaration_list: declaration
  190                 | declaration_list declaration

  191 statement_list: statement
  192               | statement_list statement

  193 expression_statement: ';'
  194                     | expression ';'

  195 selection_statement: IF '(' expression ')' statement
  196                    | IF '(' expression ')' statement ELSE statement
  197                    | SWITCH '(' expression ')' statement

  198 iteration_statement: WHILE '(' expression ')' statement
  199                    | DO statement WHILE '(' expression ')' ';'
  200                    | FOR '(' expression_statement expression_statement ')' statement
  201                    | FOR '(' expression_statement expression_statement expression ')' statement

  202 jump_statement: GOTO IDENTIFIER ';'
  203               | CONTINUE ';'
  204               | BREAK ';'
  205               | RETURN ';'
  206               | RETURN expression ';'

  207 translation_unit: external_declaration

  208 external_declaration: function_definition
  209                     | declaration
  210                     | IDENTIFIER '<' IDENTIFIER ',' IDENTIFIER '>'

  211 function_definition: declaration_specifiers declarator declaration_list compound_statement
  212                    | declaration_specifiers declarator compound_statement
  213                    | declarator declaration_list compound_statement
  214                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 30
'%' (37) 36
'&' (38) 25 52
'(' (40) 4 11 12 24 32 136 139 140 141 162 167 168 169 170 195 196
    197 198 199 200 201
')' (41) 4 11 12 24 32 136 139 140 141 162 167 168 169 170 195 196
    197 198 199 200 201
'*' (42) 26 34 142 143 144 145
'+' (43) 27 38
',' (44) 18 77 88 120 128 149 151 156 173 175 210
'-' (45) 28 39
'.' (46) 13
'/' (47) 35
':' (58) 62 122 123 182 183 184
';' (59) 79 80 114 193 194 199 202 203 204 205 206
'<' (60) 44 210
'=' (61) 65 90 130
'>' (62) 45 210
'?' (63) 62
'[' (91) 10 137 138 163 164 165 166
']' (93) 10 137 138 163 164 165 166
'^' (94) 54
'{' (123) 107 108 124 125 172 173 185 186 187 188
'|' (124) 56
'}' (125) 107 108 124 125 172 173 185 186 187 188
'~' (126) 29
error (256)
IDENTIFIER (258) 1 13 14 107 109 125 126 129 130 135 155 156 182 202
    210
I_CONSTANT (259) 5
F_CONSTANT (260) 6
STRING_LITERAL (261) 7
SIZEOF (262) 23 24
ENUMERATION_CONSTANT (263)
PTR_OP (264) 14
INC_OP (265) 15 20
DEC_OP (266) 16 21
LEFT_OP (267) 41
RIGHT_OP (268) 42
LE_OP (269) 46
GE_OP (270) 47
EQ_OP (271) 49
NE_OP (272) 50
AND_OP (273) 58
OR_OP (274) 60
MUL_ASSIGN (275) 66
DIV_ASSIGN (276) 67
MOD_ASSIGN (277) 68
ADD_ASSIGN (278) 69
SUB_ASSIGN (279) 70
LEFT_ASSIGN (280) 71
RIGHT_ASSIGN (281) 72
AND_ASSIGN (282) 73
XOR_ASSIGN (283) 74
OR_ASSIGN (284) 75
FUNC_NAME (285) 8
TYPEDEF (286) 91
EXTERN (287) 92
STATIC (288) 93
AUTO (289) 94
REGISTER (290) 95
TYPEDEF_NAME (291)
CHAR (292) 97
SHORT (293) 98
INT (294) 99
LONG (295) 100
SIGNED (296) 103
UNSIGNED (297) 104
FLOAT (298) 101
DOUBLE (299) 102
CONST (300) 131
VOLATILE (301) 132
VOID (302) 96
STRUCT (303) 110
UNION (304) 111
ENUM (305) 124 125 126
ELLIPSIS (306) 149
USING (307)
PRE (308)
CASE (309) 183
DEFAULT (310) 184
IF (311) 195 196
ELSE (312) 196
SWITCH (313) 197
WHILE (314) 198 199
DO (315) 199
FOR (316) 200 201
GOTO (317) 202
CONTINUE (318) 203
BREAK (319) 204
RETURN (320) 205 206


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
primary_expression (91)
    on left: 1 2 3 4, on right: 9
constant (92)
    on left: 5 6, on right: 2
string (93)
    on left: 7 8, on right: 3
postfix_expression (94)
    on left: 9 10 11 12 13 14 15 16, on right: 10 11 12 13 14 15 16
    19
argument_expression_list (95)
    on left: 17 18, on right: 12 18
unary_expression (96)
    on left: 19 20 21 22 23 24, on right: 20 21 23 31 64
unary_operator (97)
    on left: 25 26 27 28 29 30, on right: 22
cast_expression (98)
    on left: 31 32, on right: 22 32 33 34 35 36
multiplicative_expression (99)
    on left: 33 34 35 36, on right: 34 35 36 37 38 39
additive_expression (100)
    on left: 37 38 39, on right: 38 39 40 41 42
shift_expression (101)
    on left: 40 41 42, on right: 41 42 43 44 45 46 47
relational_expression (102)
    on left: 43 44 45 46 47, on right: 44 45 46 47 48 49 50
equality_expression (103)
    on left: 48 49 50, on right: 49 50 51 52
and_expression (104)
    on left: 51 52, on right: 52 53 54
exclusive_or_expression (105)
    on left: 53 54, on right: 54 55 56
inclusive_or_expression (106)
    on left: 55 56, on right: 56 57 58
logical_and_expression (107)
    on left: 57 58, on right: 58 59 60
logical_or_expression (108)
    on left: 59 60, on right: 60 61 62
conditional_expression (109)
    on left: 61 62, on right: 62 63 78
assignment_expression (110)
    on left: 63 64, on right: 17 18 64 76 77 171
assignment_operator (111)
    on left: 65 66 67 68 69 70 71 72 73 74 75, on right: 64
expression (112)
    on left: 76 77, on right: 4 10 62 77 194 195 196 197 198 199 201
    206
constant_expression (113)
    on left: 78, on right: 122 123 130 137 164 166 183
declaration (114)
    on left: 79 80, on right: 189 190 209
declaration_specifiers (115)
    on left: 81 82 83 84 85 86, on right: 79 80 82 84 86 152 153 154
    211 212
init_declarator_list (116)
    on left: 87 88, on right: 80 88
init_declarator (117)
    on left: 89 90, on right: 87 88
storage_class_specifier (118)
    on left: 91 92 93 94 95, on right: 81 82
type_specifier (119)
    on left: 96 97 98 99 100 101 102 103 104 105 106,
    on right: 83 84 115 116
struct_or_union_specifier (120)
    on left: 107 108 109, on right: 105
struct_or_union (121)
    on left: 110 111, on right: 107 108 109
struct_declaration_list (122)
    on left: 112 113, on right: 107 108 113
struct_declaration (123)
    on left: 114, on right: 112 113
specifier_qualifier_list (124)
    on left: 115 116 117 118, on right: 114 115 117 157 158
struct_declarator_list (125)
    on left: 119 120, on right: 114 120
struct_declarator (126)
    on left: 121 122 123, on right: 119 120
enum_specifier (127)
    on left: 124 125 126, on right: 106
enumerator_list (128)
    on left: 127 128, on right: 124 125 128
enumerator (129)
    on left: 129 130, on right: 127 128
type_qualifier (130)
    on left: 131 132, on right: 85 86 117 118 146 147
declarator (131)
    on left: 133 134, on right: 89 90 121 123 136 152 211 212 213 214
direct_declarator (132)
    on left: 135 136 137 138 139 140 141, on right: 133 134 137 138
    139 140 141
pointer (133)
    on left: 142 143 144 145, on right: 133 144 145 159 161
type_qualifier_list (134)
    on left: 146 147, on right: 143 145 147
parameter_type_list (135)
    on left: 148 149, on right: 139 168 170
parameter_list (136)
    on left: 150 151, on right: 148 149 151
parameter_declaration (137)
    on left: 152 153 154, on right: 150 151
identifier_list (138)
    on left: 155 156, on right: 140 156
type_name (139)
    on left: 157 158, on right: 24 32
abstract_declarator (140)
    on left: 159 160 161, on right: 153 158 162
direct_abstract_declarator (141)
    on left: 162 163 164 165 166 167 168 169 170, on right: 160 161
    165 166 169 170
initializer (142)
    on left: 171 172 173, on right: 90 174 175
initializer_list (143)
    on left: 174 175, on right: 172 173 175
statement (144)
    on left: 176 177 178 179 180 181, on right: 182 183 184 191 192
    195 196 197 198 199 200 201
labeled_statement (145)
    on left: 182 183 184, on right: 176
compound_statement (146)
    on left: 185 186 187 188, on right: 177 211 212 213 214
declaration_list (147)
    on left: 189 190, on right: 187 188 190 211 213
statement_list (148)
    on left: 191 192, on right: 186 188 192
expression_statement (149)
    on left: 193 194, on right: 178 200 201
selection_statement (150)
    on left: 195 196 197, on right: 179
iteration_statement (151)
    on left: 198 199 200 201, on right: 180
jump_statement (152)
    on left: 202 203 204 205 206, on right: 181
translation_unit (153)
    on left: 207, on right: 0
external_declaration (154)
    on left: 208 209 210, on right: 207
function_definition (155)
    on left: 211 212 213 214, on right: 208


state 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    STRUCT      shift, and go to state 18
    UNION       shift, and go to state 19
    ENUM        shift, and go to state 20
    '('         shift, and go to state 21
    '*'         shift, and go to state 22

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30
    declarator                 go to state 31
    direct_declarator          go to state 32
    pointer                    go to state 33
    translation_unit           go to state 34
    external_declaration       go to state 35
    function_definition        go to state 36


state 1

  135 direct_declarator: IDENTIFIER .
  210 external_declaration: IDENTIFIER . '<' IDENTIFIER ',' IDENTIFIER '>'

    '<'  shift, and go to state 37

    $default  reduce using rule 135 (direct_declarator)


state 2

   91 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 91 (storage_class_specifier)


state 3

   92 storage_class_specifier: EXTERN .

    $default  reduce using rule 92 (storage_class_specifier)


state 4

   93 storage_class_specifier: STATIC .

    $default  reduce using rule 93 (storage_class_specifier)


state 5

   94 storage_class_specifier: AUTO .

    $default  reduce using rule 94 (storage_class_specifier)


state 6

   95 storage_class_specifier: REGISTER .

    $default  reduce using rule 95 (storage_class_specifier)


state 7

   97 type_specifier: CHAR .

    $default  reduce using rule 97 (type_specifier)


state 8

   98 type_specifier: SHORT .

    $default  reduce using rule 98 (type_specifier)


state 9

   99 type_specifier: INT .

    $default  reduce using rule 99 (type_specifier)


state 10

  100 type_specifier: LONG .

    $default  reduce using rule 100 (type_specifier)


state 11

  103 type_specifier: SIGNED .

    $default  reduce using rule 103 (type_specifier)


state 12

  104 type_specifier: UNSIGNED .

    $default  reduce using rule 104 (type_specifier)


state 13

  101 type_specifier: FLOAT .

    $default  reduce using rule 101 (type_specifier)


state 14

  102 type_specifier: DOUBLE .

    $default  reduce using rule 102 (type_specifier)


state 15

  131 type_qualifier: CONST .

    $default  reduce using rule 131 (type_qualifier)


state 16

  132 type_qualifier: VOLATILE .

    $default  reduce using rule 132 (type_qualifier)


state 17

   96 type_specifier: VOID .

    $default  reduce using rule 96 (type_specifier)


state 18

  110 struct_or_union: STRUCT .

    $default  reduce using rule 110 (struct_or_union)


state 19

  111 struct_or_union: UNION .

    $default  reduce using rule 111 (struct_or_union)


state 20

  124 enum_specifier: ENUM . '{' enumerator_list '}'
  125               | ENUM . IDENTIFIER '{' enumerator_list '}'
  126               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


state 21

  136 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 40
    '('         shift, and go to state 21
    '*'         shift, and go to state 22

    declarator         go to state 41
    direct_declarator  go to state 32
    pointer            go to state 33


state 22

  142 pointer: '*' .
  143        | '*' . type_qualifier_list
  144        | '*' . pointer
  145        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    '*'       shift, and go to state 22

    $default  reduce using rule 142 (pointer)

    type_qualifier       go to state 42
    pointer              go to state 43
    type_qualifier_list  go to state 44


state 23

  209 external_declaration: declaration .

    $default  reduce using rule 209 (external_declaration)


state 24

   79 declaration: declaration_specifiers . ';'
   80            | declaration_specifiers . init_declarator_list ';'
  211 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  212                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 40
    '('         shift, and go to state 21
    '*'         shift, and go to state 22
    ';'         shift, and go to state 45

    init_declarator_list  go to state 46
    init_declarator       go to state 47
    declarator            go to state 48
    direct_declarator     go to state 32
    pointer               go to state 33


state 25
